--- a/example.html
+++ b/example.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style type="text/css">
+    <!-- <style type="text/css">
       body {
         background-color: "#f0f0f2";
         margin: 0;
@@ -33,7 +33,7 @@
           width: auto;
         }
       }
-    </style>
+    </style> -->
   </head>
 
   <body>
